--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,18 +19,18 @@
         <div class="alert alert-dark" id="success-msg" th:if="${signupSuccess}">
             You successfully signed up! Please continue to the <a th:href="@{/login}">login</a> page.
         </div>
-        <div class="alert alert-danger" id="error-msg" th:if="${signupError}">
+        <div class="alert alert-danger" id="error-msg" th:if="${errorMsg}">
             <span th:text="${errorMsg}"></span>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputFirstName">First Name</label>
-                <input type="input" name="firstName" class="form-control" id="inputFirstName"  placeholder="Enter First Name" maxlength="20" required>
+                <input type="input" name="firstname" class="form-control" id="inputFirstName"  placeholder="Enter First Name" maxlength="20" required>
 
             </div>
             <div class="form-group col-md-6">
                 <label for="inputLastName">Last Name</label>
-                <input type="input" name="lastName" class="form-control" id="inputLastName" placeholder="Enter Last Name" maxlength="20" required>
+                <input type="input" name="lastname" class="form-control" id="inputLastName" placeholder="Enter Last Name" maxlength="20" required>
             </div>
         </div>
         <div class="form-row">
