--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -65,7 +65,6 @@
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                     + Add a New Note
                 </button>
-
                 <div class="table-responsive">
                     <table class="table table-striped" id="userTable">
                         <thead>
@@ -76,13 +75,17 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <tr th:each="notes:${notes}" >
                             <td>
-                                <button type="button" class="btn btn-success">Edit</button>
+                                <button type="button" class="btn btn-success"
+                                        th:note-id="${notes.getNoteId()}" th:note-title="${notes.getTitle()}"
+                                        th:note-description="${notes.getDescription()}"
+                                        onclick="showNoteModal(this.getAttribute('note-id'),
+                                this.getAttribute('note-title'), this.getAttribute('note-description'))">Edit</button>
                                 <a class="btn btn-danger">Delete</a>
-                            </td>
-                            <th scope="row">Example Note Title</th>
-                            <td>Example Note Description </td>
+                             </td>
+                            <th scope="row" th:text="${notes.notetitle}">Example Note Title</th>
+                            <td th:text="${notes.notedescription}">Example Note Description </td>
                         </tr>
                         </tbody>
                     </table>
@@ -98,15 +101,15 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form action="#" method="POST">
-                                    <input type="hidden" name="noteId" id="note-id">
+                                <form action="#" method="POST" th:action="@{/notes}">
+                                    <input type="hidden" name="noteid" id="note-id">
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Title</label>
-                                        <input type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
+                                        <input type="text" name= "notetitle" class="form-control" id="note-title" maxlength="20" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="note-description" class="col-form-label">Description</label>
-                                        <textarea class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
+                                        <textarea class="form-control" name="notedescription" id="note-description" rows="5" maxlength="1000" required></textarea>
                                     </div>
                                     <button id="noteSubmit" type="submit" class="d-none"></button>
                                 </form>
@@ -194,10 +197,10 @@
 <!--For opening the note modal-->
 <script type="text/javascript">
             // For opening the note modal
-            function showNoteModal(noteId, noteTitle, noteDescription) {
-                $('#note-id').val(noteId ? noteId : '');
-                $('#note-title').val(noteTitle ? noteTitle : '');
-                $('#note-description').val(noteDescription ? noteDescription : '');
+            function showNoteModal(noteid, notetitle, notedescription) {
+                $('#note-id').val(noteid ? noteid : '');
+                $('#note-title').val(notetitle ? notetitle : '');
+                $('#note-description').val(notetescription ? notedescription : '');
                 $('#noteModal').modal('show');
             }
 
