--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -200,7 +200,7 @@
             function showNoteModal(noteid, notetitle, notedescription) {
                 $('#note-id').val(noteid ? noteid : '');
                 $('#note-title').val(notetitle ? notetitle : '');
-                $('#note-description').val(notetescription ? notedescription : '');
+                $('#note-description').val(notedescription ? notedescription : '');
                 $('#noteModal').modal('show');
             }
 
