--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -198,7 +198,7 @@
 <script type="text/javascript">
             // For opening the note modal
             function showNoteModal(noteid, notetitle, notedescription) {
-                $('#note-id').val(noteid ? noteid : '');
+                $('#note-id').val(noteid ? noteid : 0);
                 $('#note-title').val(notetitle ? notetitle : '');
                 $('#note-description').val(notedescription ? notedescription : '');
                 $('#noteModal').modal('show');
