--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,6 +18,10 @@
         <h1 class="display-5">Success</h1>
         <span>Your note was successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
     </div>
+    <div class="alert alert-success fill-parent" th:if="${success1}">
+        <h1 class="display-5">Success</h1>
+        <span>Your note was successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
+    </div>
 </div>
 </body>
 </html>
